--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,15 @@ services:
     ports:
       - 3004:3000
 
+  games:
+    build: ./games
+    environment:
+      HOST: http://localhost:3005
+    ports:
+      - 3005:3000
+
   app:
-    build: ./app
+    build: ./app-tailor
     depends_on:
       - header
       - footer
@@ -40,5 +47,6 @@ services:
       FOOTER_HOST: http://footer:3000
       HOME_HOST: http://home:3000
       FOOD_HOST: http://food:3000
+      GAMES_HOST: http://games:3000
     ports:
       - 3000:3000
